# trajectory_optimization

./: CMakeLists.txt  README.md  package.xml
include/trajectory_optimization/: dynamicPlanner.h  fakeDetector.h  mapModuleOctomap.h  mavrosTest.h  mpcPlanner.h  optimization.h  polyTrajGen.h  readfile.h  staticPlanner.h  timeOptimizer.h  utils.h  vis_utils.h
launch/: rviz.launch
map/: box.bt  maze.bt  testmap.bt
path/: waypoint_box.txt  waypoint_maze.txt  waypoint_maze_complete.txt  waypoint_tree.txt  waypoint_tunnel.txt
rviz/: exploration.rviz  trajectory.rviz
scripts/: write_result.py
src/: fakeDetector.cpp  mapModuleOctomap.cpp  mavrosTest.cpp  mpcPlanner.cpp  polyTrajGen.cpp  saved_path_vis.cpp  test_eigen.cpp  test_generate_trajectory.cpp  test_quadprog.cpp  timeOptimizer.cpp  waypoint_path_vis.cpp
src/test/: test_acado.cpp  test_detector.cpp  test_dynamicPlanner.cpp  test_gazeboTrajectory.cpp  test_generate_trajectory.cpp  test_mapModuleOctomap.cpp  test_mavros_node.cpp  test_mpcPlanner.cpp  test_quadprog.cpp  test_staticPlanner.cpp  test_timeOptimizer.cpp
